welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    var couleur:Boolean = Color.green
avance()
getCouleurSol()
	if(getCouleurSol  == Color.green)
{
	avance()
	}
	return getCouleurSol()
}        
